--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
       <div class="bottom-legend">
         <div class="swatches-container">
           <div class="swatch">
-            <div class="swatch-red"></div>
-            <div class="swatch-label">Temperatur dieses Jahr</div>
-            <div class="swatch-blue">
+            <div class="swatch-row">
+                <div class="swatch-red"></div>
+                <div class="swatch-label">Temperatur dieses Jahr</div>
             </div>
-            <div class="swatch-label">Ø Tageshöchsttemperatur 1993-2023</div>
-          </div>
+            <div class="swatch-row">
+                <div class="swatch-blue"></div>
+                <div class="swatch-label">Ø Tageshöchsttemperatur 1993-2023</div>
+            </div>
+        </div>
         </div>
         <div class="info-icon">
           <button class="info-btn" id="info-btn" aria-label="More information">
