fix: adjusted bottomm swatcg

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="headline-container">
       <div class="headline">
-        <div class="question">Ist das Wetter noch normmaloder schon der Klimawandel?</div>
+        <div class="question">Ist das Wetter noch normmal<br/>oder schon der Klimawandel?</div>
         <div class="today">
           <img id="tempImage" src="" />
           <span class="subline"><strong><span id="temperature"></span> </strong><span> Grad </span> <span
