fix: responsive for 656

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
         <div class="headline">
           <div class="question">Ist das Wetter noch normal?</div>
           <div class="today">
-            <img id="tempImage" src="" />
-            <span class="subline"><strong><span id="temperature"></span> </strong><span> Grad </span> <span
-                id="comparison"></span></span>
+            <!-- <img id="tempImage" src="" /> -->
+            <svg width="20.11" height="23.57" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 23.7837L10.0565 0.216309L20.113 23.7837H0Z" fill="#FF7A00"/>
+              </svg>              
+            <span class="subline"><strong><span id="temperature">11,2</span> </strong><span>  Grad </span> <span
+                id="comparison">wärmer</span></span>
           </div>
           <div class="bottom-legend">
             <div class="swatch-label">Ø 30 Tage 2024 vs. 1973-2023</div>
