fix: added the api2 js from historical wetter

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="swatch-label">Ø 30 Tage 2024 vs. 1973-2023</div>
           </div>
         </div>
-
+        <div class="info-container"></div>
         <div class="info-icon">
           <span class="info-text">Alle Info</span>
           <button class="info-btn" id="info-btn" aria-label="More information">
@@ -53,7 +53,7 @@
     <div class="card-body">
       <div id="tempChart"></div>
     </div>
-    
+
      <!-- Modal content -->
      <div class="search-page-container" id="search-page-container">
       <p class="search-page-header">Suchen Sie Ihren Standort</p>
