fix: added margin on the search-pge header , input container

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="info-container"></div>
         <div class="info-icon">
-          <span class="info-text">Alle Infos zum aktuellen Wetter</span>
+          <span class="info-text">Alle Infos zum <br/> aktuellen Wetter</span>
           <button class="info-btn" id="info-btn" aria-label="More information">
             <svg width="34" height="35" viewBox="0 0 34 35" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="16.6038" cy="17.5" r="16.6038" fill="white"/>
